# spectro-v3

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-run  test.sh
docker/debian/: Dockerfile  run
docker/ubuntu/: Dockerfile  run
docs/: architecture.md  coding_standards.md  known_bugs.md  settings_panel.md
dsp/: CMakeLists.txt
dsp/include/: audio_buffer.h  audio_types.h  dsp_utils.h  fft_processor.h  fft_window.h  ifft_processor.h  sample_buffer.h  stft_processor.h
dsp/src/: audio_buffer.cpp  fft_processor.cpp  fft_window.cpp  sample_buffer.cpp  stft_processor.cpp
dsp/tests/: .clang-tidy  CMakeLists.txt  mock_fft_processor.h  test_audio_buffer.cpp  test_audio_types.cpp  test_dsp_utils.cpp  test_fft_processor.cpp  test_fft_window.cpp  test_main.cpp  test_mock_fft_processor.cpp  test_sample_buffer.cpp  test_stft_processor.cpp
include/: audio_buffer.h  fft_processor.h  fft_window.h
qt6_gui/: CMakeLists.txt
qt6_gui/adapters/: audio_buffer_qiodevice.cpp  audio_buffer_qiodevice.h  audio_device.h  audio_file_reader.cpp  audio_sink.h  media_devices.cpp  media_devices.h
qt6_gui/controllers/: audio_file.cpp  audio_file.h  audio_file_reader.cpp  audio_file_reader.h  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  media_devices.cpp  media_devices.h  settings_controller.cpp  settings_controller.h  spectrogram_controller.cpp  spectrogram_controller.h
qt6_gui/include/: colormap_data.h  global_constants.h  main_window.h
qt6_gui/include/controllers/: main_window.h
qt6_gui/models/: audio_buffer.cpp  audio_buffer.h  audio_buffer_qiodevice.cpp  audio_file_reader.cpp  audio_file_reader.h  audio_recorder.cpp  audio_recorder.h  colormap.cpp  colormap.h  settings.cpp  settings.h
qt6_gui/src/: main.cpp  main_window.cpp  main_window.h
qt6_gui/src/controllers/: main_window.cpp
qt6_gui/tests/: .clang-tidy  CMakeLists.txt  mock_media_devices.h  spectrogram_controller_test_fixture.h  stub_audio_sink.h  test_audio_buffer.cpp  test_audio_buffer_qiodevice.cpp  test_audio_file.cpp  test_audio_file_reader.cpp  test_audio_player.cpp  test_audio_recorder.cpp  test_colormap.cpp  test_config_panel.cpp  test_main.cpp  test_main_qt.cpp  test_main_window.cpp  test_scale_view.cpp  test_settings.cpp  test_settings_controller.cpp  test_settings_panel.cpp  test_spectrogram_controller.cpp  test_spectrogram_view.cpp  test_spectrum_plot.cpp
qt6_gui/tests/controllers/: test_main_window.cpp
qt6_gui/views/: config_panel.cpp  config_panel.h  scale_view.cpp  scale_view.h  settings_panel.cpp  settings_panel.h  spectrogram_view.cpp  spectrogram_view.h  spectrum_plot.cpp  spectrum_plot.h
scripts/: Dockerfile  docker-run  generate_colormap_data.py  generate_window_reference_data.py
src/: fft_processor.cpp  fft_window.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp  test_fft_processor.cpp
